force-app/main/default/objects/Account/fields/Outdoor__c.field-meta.xml
<CustomField>
    <fullName>Outdoor__c</fullName>
    <description>Indicates households likelihood to include an outdoor enthusiast. Based on the statistical analysis of consumers that have reported to bike, camp, canoe, snow ski, hunt or enjoy other outdoor activities on a frequent basis.  Values 1-99, 1=highest likelihood.   Values 01-09, Top Ranked Values 10-19 Values 20-29 Values 30-39 Values 40-49 Values 50-59Values 60-69 Values 70-79 Values 80-89 Values 90-99, Bottom RankedValues 00, Unknown</description>
    <label>Outdoor Enthusiast</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01-09</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>