force-app/main/default/objects/Account/fields/PartialProfile__c.field-meta.xml
<CustomField>
    <fullName>PartialProfile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag field identifying the consumer as a partial or full profile consumer.Field contains a Y if consumer is a partial profile consumer, a N if the consumer is a Full Profile consumer.</description>
    <label>Partial Profile?</label>
    <type>Checkbox</type>
</CustomField>