force-app/main/default/objects/Account/fields/Participating_Programs__c.field-meta.xml
<CustomField>
    <fullName>Participating_Programs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Participating Programs</label>
    <length>100</length>
    <type>Text</type>
</CustomField>