force-app/main/default/objects/Account/fields/PreferredFordDealer__c.field-meta.xml
<CustomField>
    <fullName>PreferredFordDealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Preferred Dealer Code. Sample: F11234  USA</description>
    <label>Preferred Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Preferred Ford Dealer)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>