force-app/main/default/objects/Account/fields/Primary_Sales_Representative__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Sales Representative</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PrimarySalesRepresentative</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>