force-app/main/default/objects/Account/fields/RecordStatusCode__c.field-meta.xml
<CustomField>
    <fullName>RecordStatusCode__c</fullName>
    <description>Column is for physical use only.  Denotes consumer record status (active, purged, or merged).  P = Purged M = Merged with another consumer id A = Active</description>
    <label>Record Status Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>