force-app/main/default/objects/Account/fields/RelationshipDate__c.field-meta.xml
<CustomField>
    <fullName>RelationshipDate__c</fullName>
    <description>Date when this consumers known relationship with Ford was initiated.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Relationship Date</label>
    <type>DateTime</type>
</CustomField>