force-app/main/default/objects/Account/fields/RemoteDeliveryNA__c.field-meta.xml
<CustomField>
    <fullName>RemoteDeliveryNA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether Dealer is eligible for NA(North America) Remote Delivery. Possible values - TRUE,FALSE or N/A</description>
    <label>Remote Delivery Eligible</label>
    <type>Checkbox</type>
</CustomField>