force-app/main/default/objects/Account/fields/ReservationReadyNA__c.field-meta.xml
<CustomField>
    <fullName>ReservationReadyNA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether Dealer is eligible for NA(North America) Reservation journey.Possible values - TRUE,FALSE or N/A</description>
    <label>Reservation Ready</label>
    <type>Checkbox</type>
</CustomField>