force-app/main/default/objects/Account/fields/Sales_Hours__c.field-meta.xml
<CustomField>
    <fullName>Sales_Hours__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Hours</label>
    <length>100</length>
    <type>Text</type>
</CustomField>