force-app/main/default/objects/Account/fields/SCAID__c.field-meta.xml
<CustomField>
    <fullName>SCAID__c</fullName>
    <formula>IF(RecordType.Name = &apos;Person Account&apos;,ExternalId__c,null)</formula>
    <label>SCAID</label>
    <type>Text</type>
</CustomField>