force-app/main/default/objects/Account/fields/Services_Offered__c.field-meta.xml
<CustomField>
    <fullName>Services_Offered__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Services Offered</label>
    <length>250</length>
    <type>Text</type>
</CustomField>