force-app/main/default/objects/Account/fields/Sync_To_MC__c.field-meta.xml
<CustomField>
    <fullName>Sync_To_MC__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Field indicating that the Account is eligible for synchronization to Marketing Cloud. The field should be unchecked for full sandbox org records that were copied from the production org in order to avoid SubscriberKey conflicts in Marketing Cloud.</description>
    <inlineHelpText>Field indicating that the Account is eligible for synchronization to Marketing Cloud. The field should be unchecked for full sandbox org records that were copied from the production org in order to avoid SubscriberKey conflicts in Marketing Cloud.</inlineHelpText>
    <label>Sync To MC</label>
    <type>Checkbox</type>
</CustomField>