force-app/main/default/objects/Account/fields/TEST_Mach_E_Customer_Journey__c.field-meta.xml
<CustomField>
    <fullName>TEST_Mach_E_Customer_Journey__c</fullName>
    <label>TEST Mach E Customer Journey</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Order</fullName>
            </value>
            <value>
                <fullName>Order Confirmed</fullName>
            </value>
            <value>
                <fullName>Scheduled for Production</fullName>
            </value>
            <value>
                <fullName>Vehicle Built</fullName>
            </value>
            <value>
                <fullName>Vehicle Shipped</fullName>
            </value>
            <value>
                <fullName>Vehicle at Dealership</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>