force-app/main/default/objects/Account/fields/Winner_Customer__c.field-meta.xml
<CustomField>
    <fullName>Winner_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field holds account id of the winner account when the duplicate accounts are merged</description>
    <label>Winner Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Winner Customer)</relationshipLabel>
    <relationshipName>Accounts6</relationshipName>
    <type>Lookup</type>
</CustomField>