force-app/main/default/objects/Account/listViews/Customer_Accounts.listView-meta.xml
<ListView>
    <fullName>Customer_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>PC_ADDRESS2_STREET</columns>
    <columns>PC_ADDRESS2_CITY</columns>
    <columns>PC_ADDRESS2_STATE</columns>
    <columns>PC_ADDRESS2_ZIP</columns>
    <columns>PC_ADDRESS2_COUNTRY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.PersonAccount</value>
    </filters>
    <label>Customer Accounts</label>
</ListView>